# LumenSlice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Package.swift  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml  windows.yml
app/: ContentView.swift  LumenSliceApp.swift  MetadataInspector.swift  MetadataModels.swift  VolumeModel.swift  WindowLevelDrag.swift
app/Model/: MarkupsModel.swift  SegmentationModel.swift
app/Shell/: AppShell.swift  FolderOpen.swift  GlassHelpers.swift  RangeSlider.swift  TabRail.swift  WorkspaceTab.swift
app/Tabs/: ExportControls.swift  MarkupControls.swift  SegmentControls.swift  SegmentListRow.swift  ThreeDControls.swift  VisualizeControls.swift
app/ThreeD/: MarkupModel.swift  Mesh3DViewport.swift  MeshBuilder.swift  MeshCanvas.swift  MeshModel.swift  MeshSceneView.swift  Scene3DController.swift  Scene3DMath.swift  Scene3DToolbar.swift  SceneExport.swift
app/Viewer/: CrosshairOverlay.swift  MarkupOverlay.swift  ScrollCatcher.swift  SliceBoard.swift  SliceCoordinates.swift  SlicePane.swift  ThreeDPane.swift
docs/: agent.md  context.md  dependencies.md  plan.md  timelines.md
docs/engineering/: ARCHITECTURE.md  CPP_ONBOARDING.md  DESIGN_PATTERNS.md  PERFORMANCE.md  README.md
docs/features/: ARCHITECTURE_OVERVIEW.md  DICOM_AND_VOLUME.md  MARKUPS.md  README.md  SEGMENTATION.md  THREED_AND_EXPORT.md  VIEWER_NAVIGATION.md
gui/win/: BridgeVolume.h  MainWindow.cpp  MainWindow.h  MeshView.cpp  MeshView.h  SliceView.cpp  SliceView.h  ViewState.h  main.cpp
src/bridge/: lumen_bridge.cpp  lumen_bridge_mesh.cpp  lumen_bridge_segment.cpp  lumen_bridge_volume.cpp  lumen_handle.hpp  meta_copy.hpp
src/bridge/include/: lumen_bridge.h
src/core/: volume.h
src/geometry/: plane_map.cpp  plane_map.hpp
src/io/: dicom_loader.cpp  dicom_loader.h  dicom_meta.cpp  dicom_meta.hpp
src/segmentation/: analysis.cpp  analysis.hpp  effects.cpp  effects.hpp  grow_from_seeds.cpp  grow_from_seeds.hpp  label_volume.cpp  label_volume.hpp  marching_cubes.cpp  marching_cubes.hpp  marching_cubes_tables.hpp  mask_view.cpp  mask_view.hpp  scissor.cpp  scissor.hpp  segment.cpp  segment.hpp  segment_editor.cpp  segment_editor.hpp  segment_table.cpp  segment_table.hpp  stl_export.cpp  stl_export.hpp  undo_stack.cpp  undo_stack.hpp
src/visualization/: slice_view.cpp  slice_view.h
tests/: ingest_test.cpp
tests/cpp/: meta_test.cpp  seg_test.cpp
tests/unit/: MetadataParseTests.swift  RangeSliderMathTests.swift  Scene3DMathTests.swift  SliceCoordinatesTests.swift  WindowLevelMathTests.swift
tools/: NOTARIZE_SETUP.md  make_app.sh  make_dmg.sh  make_test_series.py
tools/meshshot/: main.swift
tools/sliceshot/: main.swift
triplets/: x64-windows-rel.cmake
windows/: LumenSliceWin.cpp
